--- a/apps/admin/deno.json
+++ b/apps/admin/deno.json
@@ -8,9 +8,11 @@
   },
   "imports": {
     "vite": "npm:vite@^5.0.0",
+    "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.6",
     "@fluentui/web-components": "npm:@fluentui/web-components@^2.5.16",
     "@microsoft/fast-element": "npm:@microsoft/fast-element@^1.12.0",
     "@opentuner/ui": "../../packages/ui/mod.ts",
+    "@opentuner/ui/": "../../packages/ui/",
     "@opentuner/config": "../../packages/config/mod.ts"
   }
 }
